<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="fullName">Full name </string>
    <string name="reservation_details">Reservation Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="booking">Booking Date and Time</string>
    <string name="no_of_pax">No. of Pax:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>


    <string-array name="noOfPax">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>